# GenShelfV3_Android

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: lib-badge.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/resources/ruby/hiengine/: callback.rb  controller.rb  data.rb  duktape.rb  encoder.rb  http_client.rb  models.rb  object.rb  script_transport.rb  xml.rb
app/src/main/assets/resources/ruby/t_root/: base64.js  config.rb  crypto.js  library.rb  pro.js  reader.rb  settings.rb  types.json
app/src/main/cpp/hirender/: IMP.h  Plugin.h  process.rb  render_define.h  types.h
app/src/main/cpp/hirender/core/: Action.h  Array.h  Callback.h  Class.h  Data.h  Define.h  FixType.h  Hash.h  Map.h  Method.h  MethodImp.h  Object.h  Pointer.h  Property.h  Ref.h  Reference.h  Singleton.h  String.h  StringName.h  Variant.h  core.h  core_define.h
app/src/main/cpp/hirender/core/math/: Math.hpp  Type.h
app/src/main/cpp/hirender/core/script/: NativeObject.h  Script.h  ScriptClass.h  ScriptInstance.h
app/src/main/cpp/hirender/script/: ScriptTransport.h  Utils.h  script_define.h
app/src/main/cpp/hirender/script/java/: JClass.h  JInstance.h  JScript.h
app/src/main/cpp/hirender/script/ruby/: RubyScript.h
app/src/main/cpp/hirender/utils/: FileSystem.h  LoopThread.h  ModelLoader.h  NotificationCenter.h  Timer.h
app/src/main/cpp/hirender/utils/database/: DBMaker.h  Model.h  SQLite.h
app/src/main/cpp/hirender/utils/input/: TouchInput.h
app/src/main/cpp/hirender/utils/json/: JSONOptions.h
app/src/main/cpp/hirender/utils/network/: DIConfig.h  DIManager.h  HTTPClient.h
app/src/main/cpp/hirender/utils/xml/: XMLDocument.h  XMLNode.h
app/src/main/cpp/libxml2/: config.h  relaxng.c  tree.c
app/src/main/cpp/mruby/mrbgems/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-array-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-compiler/core/: y.tab.c
app/src/main/cpp/mruby/mrbgems/mruby-dir/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-dir/src/: dir.c
app/src/main/cpp/mruby/mrbgems/mruby-enum-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-enum-lazy/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-enumerator/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-env/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-hash-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-http/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-http/src/: mrb_http.c
app/src/main/cpp/mruby/mrbgems/mruby-io/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-io/src/: file.c  file_test.c  io.c
app/src/main/cpp/mruby/mrbgems/mruby-json/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-numeric-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-object-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-onig-regexp/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-print/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-print/src/: print.c
app/src/main/cpp/mruby/mrbgems/mruby-proc-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-range-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-require/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-require/src/: require.c
app/src/main/cpp/mruby/mrbgems/mruby-sprintf/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-string-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-struct/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-symbol-ext/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-tempfile/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-tempfile/src/: tempfile.c
app/src/main/cpp/mruby/mrbgems/mruby-time/: gem_init.c
app/src/main/cpp/mruby/mrbgems/mruby-toplevel-ext/: gem_init.c
app/src/main/cpp/mruby/mrblib/: mrblib.c
app/src/main/cpp/mruby/src/: print.c
app/src/main/cpp/program/: boost.cpp
app/src/main/cpp/program/common/: Classes.cpp  GlobalsDefine.h  README.md  load_classes.cpp  load_classes.h  nl_define.h
app/src/main/cpp/program/common/Models/: ArtBasket.cpp  ArtBasket.h  Book.cpp  Book.h  Chapter.cpp  Chapter.h  DownloadQueue.cpp  DownloadQueue.h  DuktapeEngine.cpp  DuktapeEngine.h  GBDocument.cpp  GBDocument.h  History.cpp  History.h  KeyValue.cpp  KeyValue.h  Page.cpp  Page.h  SearchTip.cpp  SearchTip.h  Settings.cpp  Settings.h  Shop.cpp  Shop.h  io_helper.cpp  io_helper.h
app/src/main/cpp/program/common/Models/tmp/: GBDocument.h  SearchTip.h
app/src/main/cpp/program/common/Utils/Encoder/: Encoder.cpp  Encoder.h
app/src/main/cpp/program/common/Utils/MD5/: MTMd5.h  MTMd5.m
app/src/main/cpp/program/common/Utils/minizip/: crypt.h  ioapi.c
app/src/main/java/com/gr/: Activity.java  Helper.java  NativeClass.java  Request.java  RequestResultListener.java
app/src/main/java/com/gr/classes/: Array.java  Callback.java  Map.java  NotificationCenter.java  Renderer.java
app/src/main/java/com/hiar/render/: Activity.java  HiRender.java  NativeClass.java  Request.java  RequestResultListener.java
app/src/main/java/com/hiar/render/classes/: Array.java  (+4 more)
app/src/main/res/drawable/: background.xml  border.xml  chapter.xml  chaptet_text.xml  circle.xml  corner.xml  side_nav_bar.xml  white.xml  white_repple.xml
app/src/main/res/drawable-v21/: white_repple.xml
app/src/main/res/layout/: activity_splash.xml  app_bar_main.xml  cell_book_header.xml  cell_chapters.xml  cell_description.xml  cell_topic.xml  content_main.xml  controller_book.xml  controller_history.xml  controller_library.xml  controller_likes.xml  controller_local_book.xml  controller_main_settings.xml  controller_post_topic.xml  controller_process.xml  controller_search.xml  controller_settings.xml  controller_shelf.xml  controller_shop.xml  controller_shops.xml  controller_social.xml  controller_topic.xml  controller_topics.xml  controller_view.xml  controller_web_view.xml  nav_header_main.xml  view_art.xml  view_status.xml  view_topic_title.xml
app/src/main/res/menu/: activity_main_drawer.xml  book_local.xml  book_online.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
(+15 files in other folders)
